k8s/sleepr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: sleepr
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec: 
  rules:
    - http:
        paths:
          - path: /reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
